# pledit

./: .gitignore  Makefile.manual  README.md  configure  configure.ac  main.c
src/: Makefile.am  Makefile.in  pl2yaml.c  pl2yaml.h  plextras.c  plextras.h  plistExtras.c  plistExtras.h  plstack.c  plstack.h  plyaml.c
