AC_PREREQ([2.69])
AC_INIT([plyaml], [0.0.1], [chaim.leib.halbert@gmail.com])
AC_CONFIG_SRCDIR([src/plyaml.c])
AM_INIT_AUTOMAKE
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT
AC_OUTPUT(Makefile src/Makefile)

